cabal-version:      2.4
name:               cpf
version:            0.1.0.0
synopsis:           Operations over Brazilian CPF

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Octavio Bokel
maintainer:         opbokel@gmail.com

-- A copyright notice.
-- copyright:
category:           Text
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Cpf

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, 
                      random,
                      split
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite cpf-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.4.0
